--- a/UrbanLauncher/Base.lproj/Main.storyboard
+++ b/UrbanLauncher/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C68" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ofr-Wf-XX1">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="ofr-Wf-XX1">
     <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,7 +12,7 @@
         <!--Main Menu-->
         <scene sceneID="A2A-YT-BDJ">
             <objects>
-                <viewController title="Main Menu" id="ofr-Wf-XX1" customClass="MainMenuViewController" customModule="UrbanLauncher" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainMenu" title="Main Menu" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ofr-Wf-XX1" customClass="MainMenuViewController" customModule="UrbanLauncher" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="05l-aZ-iG1"/>
                         <viewControllerLayoutGuide type="bottom" id="QVl-N1-Bb1"/>
@@ -29,7 +29,7 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
-                                    <segue destination="BV1-FR-VrT" kind="presentation" id="Nc2-Tf-sxu"/>
+                                    <segue destination="BV1-FR-VrT" kind="presentation" id="RnC-bw-fPf"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6r6-nZ-eCq">
@@ -66,7 +66,7 @@
         <!--Game-->
         <scene sceneID="tXr-a1-R10">
             <objects>
-                <viewController title="Game" id="BV1-FR-VrT" customClass="GameViewController" customModule="UrbanLauncher" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Game" title="Game" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BV1-FR-VrT" customClass="GameViewController" customModule="UrbanLauncher" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="8aa-yV-Osq"/>
                         <viewControllerLayoutGuide type="bottom" id="qHh-Mt-9TT"/>
@@ -75,14 +75,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7FN-vb-fVJ">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7FN-vb-fVJ">
                                 <rect key="frame" x="0.0" y="325" width="667" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Simulate Loss">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
-                                    <segue destination="o3k-U3-Ywo" kind="presentation" id="VdG-Jx-inF"/>
+                                    <segue destination="o3k-U3-Ywo" kind="presentation" id="CJF-58-ZO4"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -141,7 +141,7 @@
         <!--Verdict-->
         <scene sceneID="LeN-ku-vY2">
             <objects>
-                <viewController title="Verdict" id="o3k-U3-Ywo" customClass="VerdictViewController" customModule="UrbanLauncher" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Verdict" title="Verdict" useStoryboardIdentifierAsRestorationIdentifier="YES" id="o3k-U3-Ywo" customClass="VerdictViewController" customModule="UrbanLauncher" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Rid-zo-o6N"/>
                         <viewControllerLayoutGuide type="bottom" id="cvC-Kc-twe"/>
@@ -182,7 +182,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Nc2-Tf-sxu"/>
+        <segue reference="EVW-VG-YQL"/>
         <segue reference="n0h-n0-bCk"/>
     </inferredMetricsTieBreakers>
 </document>
